--- a/.github/workflows/start-vm.yaml
+++ b/.github/workflows/start-vm.yaml
@@ -8,7 +8,6 @@ env:
   AZURE_VM_NAME: "chatbrannan"
 
 jobs:
-  # First, start the vm
   startvm:
     runs-on: ubuntu-latest
     name: Start VM
@@ -23,4 +22,4 @@ jobs:
         with:
           azcliversion: 2.30.0
           inlineScript: |
-            az vm start --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --name "chatbrannan"
+            az vm start --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --name "${{ env.AZURE_VM_NAME }}"
