--- a/.github/workflows/start-vm.yaml
+++ b/.github/workflows/start-vm.yaml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Start VM
     steps:
-      - name: Azure Login
+      - name: Login to Azure
         uses: Azure/login@v1
         with:
           creds: ${{ secrets.AZURE_VM_CREDENTIALS }}
