--- a/.github/workflows/stop-vm.yaml
+++ b/.github/workflows/stop-vm.yaml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Shutdown and deallocate
     steps:
-      - name: Shutdown VM
+      - name: Login to Azure
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_VM_CREDENTIALS }}
