--- a/.github/workflows/start-vm.yaml
+++ b/.github/workflows/start-vm.yaml
@@ -17,7 +17,7 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_VM_CREDENTIALS }}
 
-      - name: Azure CLI script
+      - name: Start VM
         uses: azure/CLI@v1
         with:
           azcliversion: 2.30.0
