Download .env from storage and transfer it to VM

--- a/.github/workflows/start-vm.yaml
+++ b/.github/workflows/start-vm.yaml
@@ -6,8 +6,8 @@ on:
 env:
   AZURE_RESOURCE_GROUP: "chat.brannan.cloud"
   AZURE_VM_NAME: "chatbrannan"
-  AZURE_STORAGE_ACCOUNT_CONFIG: "chatbrannan"
-  AZURE_CONTAINER_CONFIG: "files"
+  AZURE_STORAGE_ACCOUNT_CONFIG: "brannancloudstorage"
+  AZURE_CONTAINER_CONFIG: "chatbrannan"
   AZURE_BLOB_CONFIG: "chatbrannan.config.env"
 
 jobs:
@@ -19,9 +19,13 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Login to Azure
-        uses: Azure/login@v1
+        uses: azure/login@v1
         with:
-          creds: ${{ secrets.AZURE_VM_CREDENTIALS }}
+          creds: ${{ secrets.AZURE_CREDS }}
+
+      - name: Set subscription
+        run: |
+          az account set --subscription "Personal"
 
       - name: Start VM
         uses: azure/CLI@v1
@@ -29,35 +33,34 @@ jobs:
           azcliversion: 2.30.0
           inlineScript: |
             az vm start --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --name "${{ env.AZURE_VM_NAME }}"
-      
+
       - name: Get VM IP
         uses: azure/CLI@v1
         with:
           azcliversion: 2.30.0
           inlineScript: |
-            vm_ip=$(az vm show --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --name "${{ env.AZURE_VM_NAME }}" --show-details --query publicIps -o tsv)
-            echo "::set-output name=vm_ip::$vm_ip"
+            ip=$(az vm show --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --name "${{ env.AZURE_VM_NAME }}" --show-details --query publicIps -o tsv)
+            echo ip - $ip
+            echo "vm_ip=$ip" >> "$GITHUB_ENV"
+            echo "test_var=hello" >> "$GITHUB_ENV"
 
-      - name: Print VM IP
-        run: echo ${{ steps.get-vm-ip.outputs.vm_ip }}
-      
+      # - name: Print VM IP from GitHub environment
+      #   run: |
+      #     echo ${{ env.vm_ip }}
+
       - name: Download config file
         uses: azure/CLI@v1
         with:
           azcliversion: 2.30.0
           inlineScript: |
-            az storage blob download |
-            --account-name ${{ env.AZURE_STORAGE_ACCOUNT_CONFIG }} |
-            --container-name ${{ env.AZURE_CONTAINER_CONFIG }} |
-            --name ${{ env.AZURE_BLOB_CONFIG }} |
-            --file "test.env"
+            az storage blob download --verbose --account-name "chatbrannanstorage" --container-name "config" --name "chatbrannan.config.env" --file "./.env"
 
-      # - name: Copy config to VM
-      #   uses: appleboy/scp-action@v0.1.7
-      #   with:
-      #     host: ${{ steps.get-vm-ip.outputs.vm_ip }}
-      #     port: 22
-      #     username: ${{ secrets.VM_USERNAME }}
-      #     key  : ${{ secrets.VM_SSH_KEY }}
-      #     source: "files/LibreChat/.env"
-      #     target: "~/"
+      - name: Copy config to VM
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ env.vm_ip }}
+          port: 22
+          username: ${{ secrets.VM_USERNAME }}
+          key: ${{ secrets.VM_SSH_KEY }}
+          source: "./.env"
+          target: "~/LibreChat/"
