--- a/.github/workflows/stop-vm.yaml
+++ b/.github/workflows/stop-vm.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v1
         with:
-          creds: ${{ secrets.AZURE_VM_CREDENTIALS }}
+          creds: ${{ secrets.AZURE_CREDS  }}
 
       - name: Shutdown VM
         uses: azure/CLI@v1
